Modify the notebook

--- a/notebook/DL_forecast_weather.ipynb
+++ b/notebook/DL_forecast_weather.ipynb
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1308,12 +1308,11 @@
     "    ax.add_feature(cfeature.COASTLINE)\n",
     "    ax.set_title(f\"Ground Truth at T+{t+1}\")\n",
     "\n",
-    "# Add single colorbar (axe dédié)\n",
+    "# Add single colorbar\n",
     "cax = fig.add_axes([0.92, 0.15, 0.015, 0.7])\n",
     "cbar = fig.colorbar(im, cax=cax)\n",
     "cbar.set_label(\"Temperature (°C)\")\n",
     "\n",
-    "# Ajuster l'espace pour laisser la place à la colorbar\n",
     "plt.subplots_adjust(right=0.9, wspace=0.15, hspace=0.25)\n",
     "\n",
     "plt.show()\n",
@@ -1326,14 +1325,11 @@
    "source": [
     "### Interpretation\n",
     "\n",
-    "The deep learning model preserves the large-scale spatial structures\n",
-    "of the meteorological field, such as smooth gradients and coherent patterns\n",
+    "The deep learning model preserves the large-scale spatial structures of the meteorological field, such as smooth gradients and coherent patterns. This model is reliable when from a day to another, there are no big changes in a very specific area. \n",
     "\n",
     "Errors are not uniformly distributed in space. They tend to be larger in regions with strong gradients or rapid local changes. This highlights the difficulty of modeling small-scale, fast-evolving phenomena using purely data-driven approaches.\n",
     "\n",
-    "In contrast, the persistence baseline fails to account for the\n",
-    "temporal evolution of these structures and systematically underestimates\n",
-    "their displacement and deformation. "
+    "In contrast, the persistence baseline fails to account for the temporal evolution of these structures and systematically underestimates their displacement and deformation. "
    ]
   },
   {
