--- a/notebook/DL_forecast_weather.ipynb
+++ b/notebook/DL_forecast_weather.ipynb
@@ -1238,13 +1238,13 @@
     }
    ],
    "source": [
-    "BATCH_IDX = 0\n",
-    "pred_indices = [0, 10, 20]  # prediction steps relative to last input (T+1, T+3, T+5)\n",
+    "BATCH_IDX = 0 # index of the sample in the batch to visualize \n",
+    "pred_indices = [0, 10, 20]  # prediction steps relative to last input (T+1, T+11, T+21)\n",
     "\n",
     "# De-normalize the data\n",
-    "x_C = x[BATCH_IDX].cpu() * std + mean       # (seq_len, H, W)\n",
-    "y_pred_C = y_pred[BATCH_IDX].cpu() * std + mean  # (pred_len, H, W)\n",
-    "y_true_C = y_true[BATCH_IDX].cpu() * std + mean  # (pred_len, H, W)\n",
+    "x_C = x[BATCH_IDX].cpu() * std + mean       \n",
+    "y_pred_C = y_pred[BATCH_IDX].cpu() * std + mean  \n",
+    "y_true_C = y_true[BATCH_IDX].cpu() * std + mean \n",
     "\n",
     "# Convert from Kelvin to Celsius\n",
     "x_C -= 273.15\n",
