Add a trained model to avoid the training part

--- a/notebook/DL_forecast_weather.ipynb
+++ b/notebook/DL_forecast_weather.ipynb
@@ -886,7 +886,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training"
+    "## Training\n",
+    "You can train the model (it takes around 32 seconds on my personal laptop) or you can use below a model that was trained previously by using this method."
    ]
   },
   {
@@ -1131,6 +1132,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the trained model (change the path as needed)\n",
+    "# torch.save(model.state_dict(), \"../convlstm_weather_model.pth\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1157,7 +1168,7 @@
     "# It serves as a simple but strong baseline in meteorology.\n",
     "def persistence_baseline(x, pred_len=pred_len):\n",
     "    # Repeat last input frame for all prediction steps\n",
-    "    last = x[:, -1].unsqueeze(1)  # (B,1,H,W)\n",
+    "    last = x[:, -1].unsqueeze(1) \n",
     "    return last.repeat(1, pred_len, 1, 1)"
    ]
   },
@@ -1175,28 +1186,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the model trained previously (or use the one just trained above)\n",
+    "convlstm_model = ConvLSTM(seq_len=seq_len, pred_len=pred_len).to(device)\n",
+    "state_dict = torch.load(\"../convlstm_weather_model.pth\", map_location=device)\n",
+    "convlstm_model.load_state_dict(state_dict)\n",
+    "\n",
     "x, y_true = next(iter(loader))\n",
     "x, y_true = x.to(device), y_true.to(device)\n",
     "with torch.no_grad():\n",
-    "    y_pred = model(x)\n",
+    "    y_pred = convlstm_model(x)\n",
     "    y_persist = persistence_baseline(x, pred_len=pred_len)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE ConvLSTM per step: [0.08510799705982208, 0.10218650102615356, 0.09386041015386581, 0.08644206076860428, 0.09524675458669662]\n",
-      "MSE Persistence per step: [0.059646591544151306, 0.12414732575416565, 0.15237319469451904, 0.16208386421203613, 0.17968972027301788]\n"
+      "MSE ConvLSTM per step: [0.06840483844280243, 0.10089081525802612, 0.11723215878009796, 0.11415492743253708, 0.1187470331788063]\n",
+      "MSE Persistence per step: [0.05570737272500992, 0.13907763361930847, 0.17316867411136627, 0.15739570558071136, 0.16416127979755402]\n"
      ]
     }
    ],
